@@ -16,6 +16,8 @@ DATE xx/xx/2010
 NEWS:
 
 NEW: [features/enhancements]
++When in DEBUG mode trace statements are dumped to a log file in the systems
+temp directory and are kept for up to seven days.
 
 BUG FIXES:
 +Fix issue where using pane navigator would result in all event handlers being
